--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS.
 venue: "McGill University"        # brief name of host site without address (e.g., "Euphoric State University")
-address: "3801 University Street, Montreal, Quebec"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
+address: "Macdonald Engineering Building, Room MD267, 815 Sherbrooke St. W., Montreal, QC"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
 country: "ca"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "en"     # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: "45.508983,-73.581343"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
+latlng: "45.505243,-73.575847"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
 humandate: "Jun 1-3, 2016"    # human-readable date (e.g., "Feb 17-18, 2020")
 humantime: "9:00 am - 4:30 pm"    # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2016-06-01      # use YYYY-MM-DD format like 2015-01-01
